# aclcopy

./: Makefile.dist  Makefile.in  README  aclcopy.c  aclcopy.man  config.h.in  configure  configure.ac  gacl.c  gacl.h
.github/workflows/: ccpp.yml  freebsd.yml
pkgs/: Makefile.dist  Makefile.in  Makefile.port.in  aclcopy.rb.in  aclcopy.spec.in  build.sh.in  control.in  local.mog  pkg-descr.in  pkginfo.in
